--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,9 @@
   "extends": [
     "next",
     "eslint:recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended",
+    "prettier"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
