--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-paginate": "^8.0.0",
     "sass": "^1.43.4"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "@types/next": "^9.0.0",
     "@types/node": "16.11.7",
     "@types/react": "17.0.34",
+    "@types/react-paginate": "^7.1.1",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "eslint": "7",
     "eslint-config-next": "12.0.3",
