prettierによる自動修正

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,8 +21,6 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": [
-  ],
-  "rules": {
-  }
+  "plugins": [],
+  "rules": {}
 }
